<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F0F2F5"
    android:padding="16dp"
    tools:context=".ComingActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="395dp"
        android:layout_height="214dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/coming_soon" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/back_soon"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/maintenance"
        android:textColor="#888888"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/descs"
        android:textColor="#888888"
        android:textSize="14sp"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" />

</RelativeLayout>
